Get up-to-speed with hxlc build and publish
* Introduce dependency on f-spec package
* Get working hxlc rad

--- a/dotnet/src/Carbonfrost.Commons.Hxl/Automation/TextTemplates/cs-TemplateSkeleton.g.tt
+++ b/dotnet/src/Carbonfrost.Commons.Hxl/Automation/TextTemplates/cs-TemplateSkeleton.g.tt
@@ -2,6 +2,8 @@
 <#@ import namespace="System.Linq" #>
 <#@ import namespace="System; /*" #>
 
+#pragma warning disable CS8019
+
 // File automatically generated at <#= DateTime.Now #>
 namespace <#= this.Namespace #> {
 
