--- a/dotnet/src/Carbonfrost.Commons.Hxl/Automation/TextTemplates/cs-TemplateFactorySkeleton.g.tt
+++ b/dotnet/src/Carbonfrost.Commons.Hxl/Automation/TextTemplates/cs-TemplateFactorySkeleton.g.tt
@@ -2,6 +2,8 @@
 <#@ import namespace="System.Linq" #>
 <#@ import namespace="System; /*" #>
 
+#pragma warning disable CS8019
+
 using System;
 using System.Linq;
 using Carbonfrost.Commons.Hxl;
